--- a/index.html
+++ b/index.html
@@ -7,5 +7,46 @@
 </head>
 <body>
 
+<!-- header -->
+
+	<header>
+		<img src="resources/images/logo.png" alt="logo" />
+		<h3>SECRET AGENT SUPPLY INC.</h3>
+	</header>
+
+<!-- main banner -->
+
+	<div class="motorcycle">
+		
+		<div class="news">
+			
+		</div>
+
+	</div>
+
+<!-- navigation -->
+
+	<div class="menu">
+
+		<span>Eyewear</span>
+		<span>Apparel</span>
+		<span>Gadgets</span>
+		<span>Vehicles</span>
+		<span>Classes</span>
+		<span>Contact</span>
+		
+
+	</div>
+
+<!-- product grid -->
+
+<!-- locations -->
+
+<!-- hours -->
+
+<!-- footer -->
+
+
+
 </body>
 </html>
