--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 <!-- main banner -->
 
 	<div class="motorcycle">
-		
+
 		<div class="news">
-			
+			<h3>NEW ARRIVAL</h3>
+			<h1>SPORT BIKES AND MOTOCYLCES</h1>
+
 		</div>
 
 	</div>
@@ -34,18 +36,50 @@
 		<span>Vehicles</span>
 		<span>Classes</span>
 		<span>Contact</span>
-		
+
 
 	</div>
 
 <!-- product grid -->
 
+	<div class="products">
+
+		<div class="product">
+			<img src="resources/images/pen.png" alt="glasses" />
+			<span>Exploding Pen</span>
+		</div>
+
+		<div class="product">
+			<img src="resources/images/watch.png" alt="watch">
+			<span>Cellular Watch</span>
+		</div>
+
+		<div class="product">
+			<img src="resources/images/glasses.png" alt="glasses">
+			<span>Thermal Glasses</span>
+		</div>
+
+	</div>
+
 <!-- locations -->
+
+	<div class="Location">
+		<span>Location</span>
+		<p>-47.346436, 84.32354</p>
+	</div>
 
 <!-- hours -->
 
+	<div class="Hours">
+		<span>Hours</span>
+		<p>0800 - 1800</p>
+	</div>
+
 <!-- footer -->
 
+	<div class="Copyright">
+		<span>Copyright Secret Agent Supply Inc.</span>
+	</div>
 
 
 </body>
